# local-chat-integration

./: README.md  Taskfile.yml  docker-compose.yml
api-server/: .dockerignore  .gitignore  Dockerfile  Taskfile.yml  main.py  pyproject.toml
api-server/.claude/: CLAUDE.md
api-server/.cursor/: hooks.json
api-server/.cursor/rules/: pyright.mdc  ruff.mdc
api-server/app/: __init__.py  config.py  database.py  main.py
api-server/app/enums/: __init__.py  errors.py  http_codes.py  schemas.py
api-server/app/models/: __init__.py  chat.py  message.py
api-server/app/modules/: chats.py  messages.py
api-server/app/routers/: __init__.py  chats.py  messages.py
api-server/app/services/: __init__.py  llm.py
api-server/app/utils/: time.py
api-server/scripts/: download_weights.py
database/: Taskfile.yml  docker-compose.yml
web-app/: .dockerignore  Dockerfile  Taskfile.yml  biome.json  package.json  pnpm-lock.yaml
web-app/.claude/: CLAUDE.md
web-app/.claude/skills/frontend-design/: SKILL.md
web-app/.claude/skills/ultracite/: SKILL.md
web-app/.cursor/rules/: ultracite.mdc
web-app/src/app/: globals.css  layout.tsx
web-app/src/app/chat/: layout.tsx  page.tsx
web-app/src/app/chat/[chatId]/: page.tsx
web-app/src/components/chat/: chat-context.tsx  chat-id-page-client.tsx  chat-layout-client.tsx  chat-stats-bar.tsx  composer.tsx  message-card.tsx  message-timeline.tsx
web-app/src/components/sidebar/: chat-item.tsx  chat-list.tsx  chat-sidebar.tsx  new-chat-button.tsx
web-app/src/components/theme/: theme-toggle.tsx
web-app/src/components/ui/: button.tsx  confirm-modal.tsx  toaster.tsx
web-app/src/hooks/: use-chat-stream.ts
web-app/src/lib/: api-routes.ts  api.ts  server-api.ts
web-app/src/types/: index.ts
web-app/src/utils/: constants.ts
